--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "description": "A cross platform desktop client for google play music - built with electron",
   "main": "main.js",
-  "author": "Ryan French",
+  "author": "Ryan French <http://ryanfrench.co>",
   "scripts": {
     "start": "electron ."
   },
   "license": "MIT",
   "dependencies": {
+    "electron-prebuilt": "^0.25.1-1"
+  },
+  "devDependencies": {
     "electron-prebuilt": "^0.25.1-1"
   }
 }
