--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "main.js",
   "author": "Ryan French <http://ryanfrench.co>",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "debug": "NODE_ENV=debug electron ."
   },
   "license": "MIT",
   "devDependencies": {
-    "electron-prebuilt": "^0.25.1-1"
+    "electron-prebuilt": "^0.36.2"
   }
 }
